Issue 4399 - Add WebView inheritor with ad blocking
minor, mostly code style changes